// Copyright Â© 2017-2021 UKG Inc. <https://www.ukg.com>
syntax = "proto3";

option csharp_namespace = "com.ukg.surge.multilanguage.protobuf";

message State {
  string aggregateId = 1;
  bytes payload = 2;
}

message Command {
  string aggregateId = 1;
  bytes payload = 2;
}

message Event {
  string aggregateId = 1;
  bytes payload = 2;
}

message ProcessCommandRequest {
  string aggregateId = 1;
  State state = 2;
  Command command = 3;
}

message ProcessCommandReply {
  string aggregateId = 1;
  bool isSuccess = 2;
  string rejectionMessage = 3;  // non-empty when isSuccess = false
  repeated Event events = 4;
  State newState = 5;
}

message HandleEventsRequest {
  string aggregateId = 1;
  State state = 2;
  repeated Event events = 3;
}

message HandleEventsResponse {
  string aggregateId = 1;
  State state = 2;
}

message ForwardCommandRequest {
  string aggregateId = 1;
  Command command = 2;
}

message ForwardCommandReply {
  string aggregateId = 1;
  bool isSuccess = 2;
  string rejectionMessage = 3; // non-empty when isSuccess = false
  State newState = 4;
  repeated Event loggedEvents = 5;
}

message GetStateRequest {
  string aggregateId = 1;
}

message GetStateReply {
  string aggregateId = 1;
  State state = 2;
}

message HealthCheckRequest {

}

message HealthCheckReply {
  enum Status {
    UP = 0;
    DOWN = 1;
  }
  string serviceName = 1;
  Status status = 2;
}

service MultilanguageGatewayService {
  rpc HealthCheck (HealthCheckRequest) returns (HealthCheckReply) {}
  rpc ForwardCommand (ForwardCommandRequest) returns (ForwardCommandReply) {}
  rpc GetState (GetStateRequest) returns (GetStateReply) {}
}

service BusinessLogicService {
  rpc HealthCheck (HealthCheckRequest) returns (HealthCheckReply) {}
  rpc ProcessCommand (ProcessCommandRequest) returns (ProcessCommandReply) {}
  rpc HandleEvents (HandleEventsRequest) returns (HandleEventsResponse) {}
}
